# Annotations

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yaml
docs/: reference.md
reference/: index.html
src/annotations/: __init__.py  annotations.py  ontology.py
